--- a/packages/sc-mysqlcluster/compositions/mysqlcluster/test/scenarios/standard/claim.yaml
+++ b/packages/sc-mysqlcluster/compositions/mysqlcluster/test/scenarios/standard/claim.yaml
@@ -27,7 +27,7 @@ spec:
         requests:
           memory: 2Gi
           cpu: "1"
-        limit:
+        limits:
           memory: 4Gi
           cpu: "2"
       configuration: |
@@ -59,7 +59,7 @@ spec:
         requests:
           memory: 1Gi
           cpu: 500m
-        limit:
+        limits:
           memory: 2Gi
           cpu: "1"
       tolerations: []
@@ -71,7 +71,7 @@ spec:
         requests:
           memory: 200Mi
           cpu: 100m
-        limit:
+        limits:
           memory: 500Mi
           cpu: 200m
     backup:
