feat: add regex to replace dot with dash in bucket name

--- a/packages/objectstores/compositions/object-store/test/scenarios/s3/claim.yaml
+++ b/packages/objectstores/compositions/object-store/test/scenarios/s3/claim.yaml
@@ -6,7 +6,7 @@ spec:
   parameters:
     clusterName: "example-cluster"
     objectStoreProvider: "s3"
-    bucketName: "example-mojaloopxyz-object-store"
+    bucketName: "example.mojaloopxyz-object-store"
     ccK8sProviderName: "kubernetes-provider"
     esoPushSecret: true
     vaultSecretStore: "vault-backend"
