--- a/packages/aws-docdbcluster/compositions/docdbcluster/resources/definition.yaml
+++ b/packages/aws-docdbcluster/compositions/docdbcluster/resources/definition.yaml
@@ -163,6 +163,9 @@ spec:
                   subnets:
                     description: The comma seperated list of subnet-ids to create the subnetgroup
                     type: string
+                  azs:
+                    description: The comma separated list of availability zones to use
+                    type: string
                   username:
                     description: The name of master user
                     type: string
@@ -189,6 +192,7 @@ spec:
                   - preferredMaintenanceWindow
                   - region
                   - subnets
+                  - azs
                   - username
                   - vpcCidr
                   - vpcId
