feat: external name services for consumer app

--- a/packages/aws-docdbcluster/compositions/docdbcluster/test/scenarios/standard/claim.yaml
+++ b/packages/aws-docdbcluster/compositions/docdbcluster/test/scenarios/standard/claim.yaml
@@ -11,6 +11,10 @@ spec:
       ccK8sProviderName: "provider-kubernetes"
   parameters:
     allowMajorVersionUpgrade: false
+    appNamespace: "stateful-resources"
+    consumerAppsExternalServices:
+      - ttk-mongodb-svc
+      - bulk-mongodb-svc
     applyImmediately: false
     backupRetentionPeriod: 7
     databaseName: "exampledb"
