--- a/packages/aws-rdscluster/compositions/rdscluster/resources/definition.yaml
+++ b/packages/aws-rdscluster/compositions/rdscluster/resources/definition.yaml
@@ -60,6 +60,11 @@ spec:
                   appNamespace:
                     type: string
                     description: Namespace for the consumer application
+                  consumerAppsExternalServices:
+                    type: array
+                    items:
+                      type: string
+                    description: List of externalservice names for the consumer applications
                   allowMajorVersionUpgrade:
                     description: Indicates that major version upgrades are allowed
                     type: boolean
