--- a/packages/aws-rdscluster/compositions/rdscluster/test/providers.yaml
+++ b/packages/aws-rdscluster/compositions/rdscluster/test/providers.yaml
@@ -25,3 +25,10 @@ metadata:
   name: provider-kubernetes
 spec:
   package: xpkg.upbound.io/crossplane-contrib/provider-kubernetes:v0.15.0
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-http
+spec:
+  package: "xpkg.upbound.io/crossplane-contrib/provider-http:v1.0.10"
