--- a/packages/utils/compositions/percona-role/test/scenarios/standard/claim.yaml
+++ b/packages/utils/compositions/percona-role/test/scenarios/standard/claim.yaml
@@ -15,6 +15,6 @@ spec:
     vaultSecretPath: percona/sa-token-secret
   providerConfigsRef:
     scK8sProviderName: sc-kubernetes-provider
-    ccK8sProviderName: cc-kubernetes-provider
+    ccK8sProviderName: kubernetes-provider
   managementPolicies:
     - "*"
