--- a/packages/aws-rdscluster/compositions/rdscluster/test/scenarios/conventional-rds/claim.yaml
+++ b/packages/aws-rdscluster/compositions/rdscluster/test/scenarios/conventional-rds/claim.yaml
@@ -16,8 +16,10 @@ spec:
     consumerAppsConfigMaps:
       - namespace: mojaloop
         name: global-ca-bundle
+        key: "ca-bundle.crt"
       - namespace: mcm
         name: global-ca-bundle
+        key: "ca-bundle.crt"
     appNamespace: "default"
     allowMajorVersionUpgrade: false
     applyImmediately: false
