fix: publiclyAccessible flag

--- a/packages/aws-rdscluster/compositions/rdscluster/resources/definition.yaml
+++ b/packages/aws-rdscluster/compositions/rdscluster/resources/definition.yaml
@@ -166,6 +166,10 @@ spec:
                   preferredMaintenanceWindow:
                     description: The preferred maintenance window
                     type: string
+                  publiclyAccessible:
+                    description: Indicates that the cluster is publicly accessible
+                    type: boolean
+                    default: false
                   region:
                     description: Region
                     type: string
