--- a/packages/aws-rdscluster/compositions/rdscluster/test/scenarios/standard/claim.yaml
+++ b/packages/aws-rdscluster/compositions/rdscluster/test/scenarios/standard/claim.yaml
@@ -47,6 +47,7 @@ spec:
     port: 3306
     preferredBackupWindow: "02:00-04:00"
     preferredMaintenanceWindow: "Tue:23:45-Wed:00:15"
+    publiclyAccessible: true
     region: "eu-west-1"
     skipFinalSnapshot: true
     finalSnapshotIdentifier: "example-rds-aurora-cluster"
