--- a/packages/sc-mysqlcluster/compositions/mysqlcluster/resources/definition.yaml
+++ b/packages/sc-mysqlcluster/compositions/mysqlcluster/resources/definition.yaml
@@ -135,7 +135,12 @@ spec:
                             properties:
                               storageClassName:
                                 type: string
+                                enum:
+                                  - ceph-block
+                                  - openebs-hostpath
+                                  - openebs-hostpath-retain
                                 description: Storage class name for PVC
+                                default: ceph-block
                               accessModes:
                                 type: array
                                 items:
