--- a/packages/sc-mongodbcluster/compositions/mongodbcluster/resources/definition.yaml
+++ b/packages/sc-mongodbcluster/compositions/mongodbcluster/resources/definition.yaml
@@ -77,6 +77,18 @@ spec:
                   dbSecret:
                     type: string
                     description: Secret name for the database credentials
+                  caConfigMap:
+                    type: object
+                    properties:
+                      namespace:
+                        type: string
+                        description: Namespace of the consumer application
+                      name:
+                        type: string
+                        description: Name of the configmap for the consumer application
+                      key:
+                        type: string
+                        description: Key in the configmap that contains the CA bundle
                   crVersion:
                     type: string
                   image:
