--- a/packages/nb-config/compositions/netbird-env-policy-config/resources/definition.yaml
+++ b/packages/nb-config/compositions/netbird-env-policy-config/resources/definition.yaml
@@ -1,16 +1,16 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: xnetbirdenvconfig.nb.mojaloop.io
+  name: netbirdenvpolicyconfig.nb.mojaloop.io
 spec:
   defaultCompositeDeletePolicy: Foreground
   group: nb.mojaloop.io
   names:
-    kind: XNetbirdEnvConfig
+    kind: XNetbirdEnvPolicyConfig
     plural: xnetbirdenvconfig
   claimNames:
-    kind: NetbirdEnvConfig
-    plural: netbirdenvconfig
+    kind: NetbirdEnvPolicyConfig
+    plural: netbirdenvpolicyconfig
   versions:
     - name: v1alpha1
       served: true
@@ -55,12 +55,7 @@ spec:
                     The name of the provider config to use for the source and destination k8s providers.
                   required:
                     - netbirdProviderConfigName
-                    - k8sProviderConfigName
                   properties:
-                    k8sProviderConfigName:
-                      type: string
-                      description: |-
-                        The name of the provider config to use for the source k8s provider.
                     netbirdProviderConfigName:
                       type: string
                       description: |-
@@ -68,57 +63,28 @@ spec:
                 parameters:
                   type: object
                   properties:
-                    pushSecret:
-                      type: object
-                      description: Properties for pushing secrets to vault
-                      properties:
-                        esoPushSecret:
-                          type: boolean
-                          description: |-
-                            Whether to push the secret to vault.
-                          default: false
-                        esoUpdatePolicy:
-                          type: string
-                          description: |-
-                            Policy to update the secret on vault.
-                          default: "Replace"
-                        esoDeletePolicy:
-                          type: string
-                          description: |-
-                            Policy to delete the secret on vault.
-                          default: "Delete"
-                        esoRefreshInterval:
-                          type: string
-                          description: |-
-                            Interval to refresh the secret on vault.
-                          default: "1m"
-                        vaultSecretStore:
-                          type: string
-                          description: |-
-                            Name of the secretstore on cluster for vault.
-                          default: "vault-secret-store"
-                        vaultSecretStoreKind:
-                          type: string
-                          description: |-
-                            Kind of the secret store in vault.
-                          default: "ClusterSecretStore"
                     envProperties:
                       type: object
                       description: The properties for a downstream network to connect to cc/sc.
                       properties:
-                        setupKey:
+                        policy:
                           type: object
+                          description: |-
+                            The policy to use for the env k8s nodes.
+                            This is used to create a policy that allows the env k8s nodes to connect to the cc/sc network resources.
                           properties:
-                            name:
-                              type: string
-                              description: The name of the setup key to use for the config.
-                            namespace:
-                              type: string
-                              description: The namespace of the setup key to use for the config.
-                            vaultSecretPath:
-                              type: string
-                              description: |-
-                                Path of the secret in vault.
+                            scPorts:
+                              type: array
+                              description: The ports to sc to allow in the policy.
+                              items:
+                                type: string
+                                description: individual port to allow.
+                            ccPorts:
+                              type: array
+                              description: The ports to sc to allow in the policy.
+                              items:
+                                type: string
+                                description: individual port to allow.
                         groupNames:
                           type: object
                           properties:
