--- a/packages/aws-rdscluster/compositions/rdscluster/test/scenarios/standard/claim.yaml
+++ b/packages/aws-rdscluster/compositions/rdscluster/test/scenarios/standard/claim.yaml
@@ -14,7 +14,7 @@ spec:
     externalServiceName: "example-rds-aurora-cluster"
     appNamespace: "default"
     caBundleUrl: "https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem"
-    consumerAppsConfigMap:
+    consumerAppsSecret:
          name: global-ca-bundle
          key: "ca-bundle.pem"
          namespaces:
