feat: cm to secret

--- a/packages/sc-mongodbcluster/compositions/mongodbcluster/resources/definition.yaml
+++ b/packages/sc-mongodbcluster/compositions/mongodbcluster/resources/definition.yaml
@@ -77,7 +77,7 @@ spec:
                   dbSecret:
                     type: string
                     description: Secret name for the database credentials
-                  caConfigMap:
+                  caSecret:
                     type: object
                     properties:
                       namespace:
