--- a/packages/sc-mongodbcluster/compositions/mongodbcluster/test/scenarios/standard/claim.yaml
+++ b/packages/sc-mongodbcluster/compositions/mongodbcluster/test/scenarios/standard/claim.yaml
@@ -12,7 +12,7 @@ spec:
     image: percona/percona-server-mongodb:7.0.15-9-multi
     imagePullPolicy: IfNotPresent
     dbSecret: my-db-secret
-    caConfigMap:
+    caSecret:
       name: my-ca-configmap
       namespace: env
       key: my-ca-bundle.pem
