--- a/packages/sc-mysqlcluster/compositions/mysqlcluster/resources/definition.yaml
+++ b/packages/sc-mysqlcluster/compositions/mysqlcluster/resources/definition.yaml
@@ -74,7 +74,7 @@ spec:
                   appNamespace:
                     type: string
                     description: Namespace for the consumer application
-                  caConfigMap:
+                  caSecret:
                     type: object
                     properties:
                       namespace:
