fix: typo on definition

--- a/packages/nb-config/compositions/netbird-env-policy-config/resources/definition.yaml
+++ b/packages/nb-config/compositions/netbird-env-policy-config/resources/definition.yaml
@@ -7,7 +7,7 @@ spec:
   group: nb.mojaloop.io
   names:
     kind: XNetbirdEnvPolicyConfig
-    plural: xnetbirdenvconfig
+    plural: xnetbirdenvpolicyconfig
   claimNames:
     kind: NetbirdEnvPolicyConfig
     plural: netbirdenvpolicyconfig
