--- a/packages/nb-config/compositions/netbird-env-policy-config/resources/definition.yaml
+++ b/packages/nb-config/compositions/netbird-env-policy-config/resources/definition.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: netbirdenvpolicyconfig.nb.mojaloop.io
+  name: xnetbirdenvpolicyconfig.nb.mojaloop.io
 spec:
   defaultCompositeDeletePolicy: Foreground
   group: nb.mojaloop.io
