fix: consumerAppsExternalServices add

--- a/packages/sc-mongodbcluster/compositions/mongodbcluster/resources/definition.yaml
+++ b/packages/sc-mongodbcluster/compositions/mongodbcluster/resources/definition.yaml
@@ -93,7 +93,7 @@ spec:
                     type: array
                     items:
                       type: string
-                    description: List of externalservice names for the consumer applications
+                    description: List of externalservice names for consumer applications
                   crVersion:
                     type: string
                   image:
