fix: split cc and sc

--- a/packages/nb-config/compositions/netbird-env-config/test/scenarios/default/claim.yaml
+++ b/packages/nb-config/compositions/netbird-env-config/test/scenarios/default/claim.yaml
@@ -13,7 +13,10 @@ spec:
         namespace: "setup-key-namespace"
         vaultSecretPath: "exampleenv/setupkey"
       groupNames:
+        ccNetworkResource: cc-net
         envK8sNodes: env-test-nodes
+      policy:
+        ccPorts: "8080,443"
   providerConfigsRef:
     netbirdProviderConfigName: "netbird-provider-config"
     k8sProviderConfigName: "kubernetes-provider"
