--- a/packages/nb-config/compositions/netbird-env-config/resources/definition.yaml
+++ b/packages/nb-config/compositions/netbird-env-config/resources/definition.yaml
@@ -125,9 +125,15 @@ spec:
                             ccNetworkResource:
                               type: string
                               description: The name of the external access group to use for the post-config.
-                            scNetworkResource:
-                              type: string
-                              description: The name of the external access group to use for the post-config.
                             envK8sNodes:
                               type: string
                               description: The name of the group for the env k8s nodes.
+                        policy:
+                          type: object
+                          description: |-
+                            The policy to use for the env k8s nodes.
+                            This is used to create a policy that allows the env k8s nodes to connect to the cc/sc network resources.
+                          properties:
+                            ccPorts:
+                              type: string
+                              description: The ports to sc to allow in the policy.
