--- a/packages/nb-config/compositions/netbird-env-policy-config/test/scenarios/default/claim.yaml
+++ b/packages/nb-config/compositions/netbird-env-policy-config/test/scenarios/default/claim.yaml
@@ -10,7 +10,7 @@ spec:
         scNetworkResource: sc-net
         envK8sNodes: env-test-nodes
       policy:
-        scPorts: "8080,443,6443"
+        scPorts: "8080,443,6443,3000-3005"
   providerConfigsRef:
     netbirdProviderConfigName: "netbird-provider-config"
   managementPolicies:
