--- a/packages/sc-mongodbcluster/compositions/mongodbcluster/test/scenarios/standard/claim.yaml
+++ b/packages/sc-mongodbcluster/compositions/mongodbcluster/test/scenarios/standard/claim.yaml
@@ -12,10 +12,15 @@ spec:
     image: percona/percona-server-mongodb:7.0.15-9-multi
     imagePullPolicy: IfNotPresent
     dbSecret: my-db-secret
-    caSecret:
-      name: my-ca-configmap
-      namespace: env
+    consumerAppsSecret:
+      name: my-ca-bundle
       key: my-ca-bundle.pem
+      namespaces:
+        - env
+        - env2
+    consumerAppsExternalServices:
+      - ttk-mongodb-svc
+      - bulk-mongodb-svc
     backup:
       enabled: false
       image: percona/percona-backup-mongodb:2.8.0-multi
