--- a/packages/sc-mysqlcluster/compositions/mysqlcluster/resources/definition.yaml
+++ b/packages/sc-mysqlcluster/compositions/mysqlcluster/resources/definition.yaml
@@ -74,18 +74,17 @@ spec:
                   appNamespace:
                     type: string
                     description: Namespace for the consumer application
-                  caSecret:
+                  consumerAppsSecret:
                     type: object
                     properties:
-                      namespace:
-                        type: string
-                        description: Namespace of the consumer application
                       name:
                         type: string
-                        description: Name of the configmap for the consumer application
                       key:
                         type: string
-                        description: Key in the configmap that contains the CA bundle
+                      namespaces:
+                        type: array
+                        items:
+                          type: string
                   consumerAppsExternalServices:
                     type: array
                     items:
