fix: Add dbsourceSecret param def

--- a/packages/sc-mongodbcluster/compositions/mongodbcluster/resources/definition.yaml
+++ b/packages/sc-mongodbcluster/compositions/mongodbcluster/resources/definition.yaml
@@ -80,6 +80,9 @@ spec:
                   dbSecret:
                     type: string
                     description: Secret name for the database credentials
+                  dbsourceSecret:
+                    type: string
+                    description: Secret name for the database credentials
                   consumerAppsSecret:
                     type: object
                     properties:
